[package]
name = "rustfft-jl"
version = "0.6.0"
edition = "2021"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = "Julia binding library for RustFFT"
homepage = "https://github.com/Taaitaaiger/rustfft-jl"
repository = "https://github.com/Taaitaaiger/rustfft-jl"
license = "MIT"
rust-version = "1.77"

[features]
# Because this library depends on jlrs it must declare the version of Julia it's compatible with
# by enabling a version feature. These features are "reexported", requiring one to be set at build
# time. For example, to compile a library that's compatible with Julia 1.8, use
# `cargo build --features=julia-1-8`.
julia-1-6 = ["jlrs/julia-1-6"]
julia-1-7 = ["jlrs/julia-1-7"]
julia-1-8 = ["jlrs/julia-1-8"]
julia-1-9 = ["jlrs/julia-1-9"]
julia-1-10 = ["jlrs/julia-1-10"]
julia-1-11 = ["jlrs/julia-1-11"]
julia-1-12 = ["jlrs/julia-1-12"]

# This library can be compiled with BinaryBuilder. The recipe can be found here:
# https://github.com/JuliaPackaging/Yggdrasil/tree/master/R/rustfft/build_tarballs.jl
#
# This recipe does two things to build this library:
#
# 1. determine the version feature that needs to be enabled
# 2. build the library with the yggdrasil feature and version feature from step 1
yggdrasil = ["jlrs/yggdrasil"]

# Setting these flags is required when cross-compiling from other platforms. When BinaryBuilder is
# used, only the yggdrasil feature needs to be enabled.
i686 = ["jlrs/i686"]
windows = ["jlrs/windows"]

# This feature must be enabled to run the benchmarks.
rt = ["jlrs/local-rt"]
lto = ["jlrs/lto"]

[lib]
# We build both a cdylib and an rlib, we need to enable the latter for benchmarking.
crate-type = ["cdylib", "rlib"]

[dependencies]
rustfft = "6"
jlrs = { version = "0.21", features = ["ccall", "complex"] }

[target.'cfg(unix)'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true
lto = "fat"
codegen-units = 1

[[bench]]
name = "fft"
harness = false
