[package]
name = "rustfft-jl"
version = "0.6.0"
edition = "2024"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = "Julia binding library for RustFFT"
homepage = "https://github.com/Taaitaaiger/rustfft-jl"
repository = "https://github.com/Taaitaaiger/rustfft-jl"
license = "MIT"
rust-version = "1.85"

[features]
# This library can be compiled with BinaryBuilder. The recipe can be found here:
# https://github.com/JuliaPackaging/Yggdrasil/tree/master/R/rustfft/build_tarballs.jl
#
# This recipe does two things to build this library:
#
# 1. determine the version feature that needs to be enabled
# 2. build the library with the yggdrasil feature and version feature from step 1
yggdrasil = ["jlrs/yggdrasil"]

# Setting these flags is required when cross-compiling from other platforms. When BinaryBuilder is
# used, only the yggdrasil feature needs to be enabled.
i686 = ["jlrs/i686"]
windows = ["jlrs/windows"]

# This feature must be enabled to run the benchmarks.
rt = ["jlrs/local-rt"]
lto = ["jlrs/lto"]

[lib]
# We build both a cdylib and an rlib, we need to enable the latter for benchmarking.
crate-type = ["cdylib", "rlib"]

[dependencies]
rustfft = "6"
jlrs = { git = "https://github.com/Taaitaaiger/jlrs", rev = "ef7ca48578f27d5c7d51b901a71977bdc8700375", version = "0.22", features = ["ccall", "complex", "jlrs-derive"] }

[target.'cfg(unix)'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true
lto = "fat"
codegen-units = 1

[[bench]]
name = "fft"
harness = false
